package domain.weather;

public interface ServicioMeteorologico {
	Clima getEstadoClima(String ciudad);
}



